<resources>
    <string name="app_name">AmitProject1.1</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="home_label">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="code_msg">Please enter the 6-digit code you received on:</string>
    <string name="code">code</string>
    <string name="rooms_label">Rooms</string>
    <string name="settings_label">Settings</string>
    <string name="accounts_label">Manage Accounts</string>
    <string name="new_room">Create new Room</string>
    <string name="room_name">Room name</string>
    <string name="new_account">Please enter new account details:</string>
    <string name="please_enter_new_room_details">Please enter new room details:</string>
    <string name="new_device_details">Please enter new device details:</string>
    <string name="choose_the_device">Choose the device you want to add to your room:</string>
    <string name="room">Room:</string>
    <string name="turn_all_on">turn all on</string>
    <string name="turn_all_off">turn all off</string>

    <string-array name="ports">
        <item>/dev/cu.usbmodem2101</item>
    </string-array>
</resources>