<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.amitproject11.ui.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_rooms"
        android:name="com.example.amitproject11.ui.rooms.RoomsFragment"
        android:label="@string/rooms_label"
        tools:layout="@layout/fragment_rooms" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.amitproject11.ui.settings.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_accounts"
        android:name="com.example.amitproject11.ui.accounts.AccountsFragment"
        android:label="@string/accounts_label"
        tools:layout="@layout/fragment_accounts" />
</navigation>