<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/home_bg"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/enter_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/new_account"
        android:textSize="24sp"
        android:fontFamily="@font/my_font"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="first name"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:textSize="22sp"
        android:selectAllOnFocus="true"
        android:autofillHints=""
        android:fontFamily="@font/my_font"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="last name"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:textSize="22sp"
        android:selectAllOnFocus="true"
        android:autofillHints=""
        android:fontFamily="@font/my_font"/>


    <EditText
        android:id="@+id/username_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:textSize="22sp"
        android:selectAllOnFocus="true"
        android:autofillHints=""
        android:fontFamily="@font/my_font"/>

    <EditText
        android:id="@+id/password_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textSize="22sp"
        android:selectAllOnFocus="true"
        android:autofillHints=""
        android:fontFamily="@font/my_font"/>

    <TextView
        android:id="@+id/error_msg_crate_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="16sp"
        android:fontFamily="@font/my_font"/>

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_design"
        android:textColor="@color/texts"
        android:textSize="16sp"
        android:padding="10dp"
        android:text="create"
        android:fontFamily="@font/my_font"/>


</LinearLayout>